--- a/src/app/administration/bill-loading/bill-loading.component.css
+++ b/src/app/administration/bill-loading/bill-loading.component.css
@@ -17,3 +17,25 @@ h3,h6{
     
     .div1 { grid-area: 1 / 1 / 2 / 2; }
     .div2 { grid-area: 1 / 2 / 2 / 3; }
+
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
+
+.example-input {
+  max-width: 100%;
+  width: 300px;
+}
+
+.ng-autocomplete {
+  width:50%;
+  max-width: 300px;
+  display: table;
+  margin: 0 auto;
+}
