--- a/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
+++ b/src/app/subscription/fleet-contract-broker/fleet-contract-broker-detail/fleet-contract-broker-detail.component.html
@@ -211,9 +211,9 @@
                     <div class="col-md-3 mb-4 pb-2">
                       <div class="form-outline">
                         <label class="form-label required" for="form3Examplev3">Color</label>
-                        <select formControlName="xcolor" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('xcolor').errors } ">
+                        <select formControlName="ccolor" class="form-control form-control-lg" [ngClass]="{ 'is-invalid' : submitted && search_form.get('ccolor').errors } ">
                           <option></option>
-                          <option *ngFor="let color of colorList" value="{{ color.value }}">{{ color.value }}</option>
+                          <option *ngFor="let color of colorList" value="{{ color.id }}">{{ color.value }}</option>
                         </select>
                         <div *ngIf="submitted && search_form.get('xcolor').errors" class="invalid-feedback">
                           <div *ngIf="search_form.get('xcolor').errors.required">Se requiere completar el campo</div>
@@ -348,7 +348,9 @@
                       <input type="number" formControlName="ncobro" class="form-control form-control-lg" readonly=readonly [ngClass]="{ 'is-invalid' : submitted && search_form.get('ncobro').errors }" />
                     </div>
                   </div>
-
+                  <div class="button" *ngIf="bemitir">
+                    <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="onSubmit(search_form.value)">Emitir Poliza</button>
+                  </div>
                   <div class="button" *ngIf="bpagomanual">
                     <button type="button" class="btn btn-light btn-lg" data-mdb-ripple-color="dark" (click)="addPayment()">Pago Manual</button>
                   </div>
